--- a/local.env
+++ b/local.env
@@ -1,4 +1,8 @@
 http_proxy=
 https_proxy=
 NO_PROXY=
-DB_PORT=3306
+DB_USER=sysadmin
+DB_PASSWORD=sysadmin1234
+DB_NAME=app
+DB_PORT=63306
+DB_ROOT_PASSWORD=root1234
