データベースチュートリアル

--- a/local.env
+++ b/local.env
@@ -1,7 +1,7 @@
 http_proxy=
 https_proxy=
 NO_PROXY=
-DB_USER=sysadmin
-DB_PASSWORD=sysadmin1234
+DB_USER=root
+DB_PASSWORD=root1234
+DB_HOST=127.0.0.1
 DB_PORT=63306
-DB_ROOT_PASSWORD=root1234
