--- a/.dockerignore
+++ b/.dockerignore
@@ -2,3 +2,13 @@
 .vscode
 **/__pycache__
 **/.ipynb_checkpoints
+**/pytest_cache
+
+# supervisor
+**/supervisord.pid
+
+# https://nuxt.com/docs/guide/directory-structure/gitignore
+**/node_modules
+**/.nuxt
+**/.output
+**/*.log
