--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi[all]
-PyMySQL
-SQLAlchemy
-alembic
-python-jose[cryptography]
-passlib[bcrypt]
-pytest
-click==8.1.3
+fastapi[all]~=0.95.1
+PyMySQL~=1.0.3
+SQLAlchemy~=2.0.12
+alembic~=1.10.4
+python-jose[cryptography]~=3.3.0
+passlib[bcrypt]~=1.7.4
+pytest~=7.3.1
+click~=8.1.4
