fastapi,pydanticアップデート

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-fastapi[all]~=0.95.1
-PyMySQL~=1.0.3
-SQLAlchemy~=2.0.12
-alembic~=1.10.4
+fastapi[all]~=0.103.1
+PyMySQL~=1.1.0
+SQLAlchemy~=2.0.21
+alembic~=1.12.0
 python-jose[cryptography]~=3.3.0
 passlib[bcrypt]~=1.7.4
-pytest~=7.3.1
-click~=8.1.4
+pytest~=7.4.2
+click~=8.1.7
+bump-pydantic
