--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -34,18 +34,13 @@ RUN pip install --upgrade pip && \
 # supervisorインストール
 RUN pip install supervisor
 
-# nodejs v18.x インストール
+# nodejs v20.x (lts) インストール
 # https://github.com/nodesource/distributions#installation-instructions
-RUN apt-get update && \
-    apt-get install -y ca-certificates curl gnupg && \
-    mkdir -p /etc/apt/keyrings && \
-    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
-    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_18.x nodistro main" > /etc/apt/sources.list.d/nodesource.list && \
-    apt-get update && \
-    apt-get install nodejs -y
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - &&\
+    apt-get install -y nodejs
 
 # npm v10.x インストール
-RUN npm install -g npm@^10.0.0
+RUN npm install -g npm@^10.5.0
 
 # pnpm install
 #USER app
