--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ PyMySQL~=1.1.0
 SQLAlchemy~=2.0.21
 alembic~=1.12.0
 python-jose[cryptography]~=3.3.0
-passlib[bcrypt]~=1.7.4
+bcrypt~=4.1.2
 pytest~=7.4.2
 click~=8.1.7
 bump-pydantic
